--- a/ch03-03-how-functions-work.html
+++ b/ch03-03-how-functions-work.html
@@ -178,7 +178,7 @@
 }
 
 fn another_function() {
-    println!(&quot;Another function.&quot;);
+    println!(&quot;另一支函式。&quot;);
 }
 </code></pre></pre>
 <p>Rust 的函式定義從 <code>fn</code> 開始且在函式名稱後會有一組括號，大括號告訴編譯器函式本體的開始與結束位置。</p>
@@ -189,7 +189,7 @@ fn another_function() {
     Finished dev [unoptimized + debuginfo] target(s) in 0.28s
      Running `target/debug/functions`
 Hello, world!
-Another function.
+另一支函式。
 </code></pre>
 <p>程式碼會按照 <code>main</code> 函式中的順序執行。首先，「Hello, world!」的訊息會先顯示出來，再來才會呼叫 <code>another_function</code> 並印出它的訊息。</p>
 <h3><a class="header" href="#函式參數" id="函式參數">函式參數</a></h3>
@@ -224,7 +224,7 @@ fn another_function(x: i32, y: i32) {
     println!(&quot;y 的數值爲：{}&quot;, y);
 }
 </code></pre></pre>
-<p>此範例建立了一個有兩個參數的函式，兩個都是 <code>i32</code> 型別。接著函式在印出兩個參數的數值，注意參數不必得是相同的形態，這只是我們在此範例這樣寫而已。</p>
+<p>此範例建立了一個有兩個參數的函式，兩個都是 <code>i32</code> 型別。接著函式在印出兩個參數的數值，注意參數不必得是相同的型別，這只是我們在此範例這樣寫而已。</p>
 <p>讓我們試著執行此程式碼，請覆蓋你的專案 <em>functions</em> 內的 <em>src/main.rs</em> 檔案內容爲以上範例，然後用 <code>cargo run</code> 執行程式：</p>
 <pre><code class="language-console">$ cargo run
    Compiling functions v0.1.0 (file:///projects/functions)
@@ -236,7 +236,7 @@ y 的數值爲：6
 <p>因爲我們呼叫函式時，將 <code>5</code> 給了  <code>x</code> 且將 <code>6</code> 給了 <code>y</code>，字串就會印出這些數值。</p>
 <h3><a class="header" href="#函式本體包含陳述式與表達式" id="函式本體包含陳述式與表達式">函式本體包含陳述式與表達式</a></h3>
 <p>函式本體是由一系列的陳述式（statements）並在最後可以選擇加上表達式（expression）來組成。目前我們只講了沒有用到表達式做結尾的函式。由於 Rust 是門基於表達式（expression-based）的語言，知道這樣的區別是很重要的。其他語言通常沒有這樣的區別，所以現在讓我們來看看陳述式和表達式有什麼不同，以及它們怎麼影響函式本體。</p>
-<p>我們其實已經使用了很多次陳述式與表達式。*陳述式（Statements）*是進行一些動作的指令，且不回傳任何數值。*表達式（Expressions）*則是計算並產生數值。讓我們來看一些範例：</p>
+<p>我們其實已經使用了很多次陳述式與表達式。<em>陳述式（Statements）</em> 是進行一些動作的指令，且不回傳任何數值。<em>表達式（Expressions）</em> 則是計算並產生數值。讓我們來看一些範例：</p>
 <p>建立一個變數然後用 <code>let</code> 關鍵字賦值給它就是一道陳述式。在範例 3-1 中的 <code>let y = 6;</code> 就是個陳述式。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -263,7 +263,7 @@ error: expected expression, found statement (`let`)
   = note: variable declaration using `let` is a statement
 </code></pre>
 <p><code>let y = 6</code> 陳述式不回傳數值，所以 <code>x</code> 得不到任何數值。這就和其他語言有所不同，像是 C 或 Ruby，通常它們的賦值仍能回傳所得到的值。在那些語言，你可以寫 <code>x = y = 6</code> 同時讓 <code>x</code> 與 <code>y</code> 都取得 <code>6</code>，但在 Rust 就不行。</p>
-<p>表達式則會運算出些東西，並組合成你大部分所寫的 Rust 程式。先想想看一個簡單的數學運算比如 <code>5 + 6</code>，這就是個會算出 <code>11</code> 的表達式。表達式可以是陳述式的一部分：在範例 3-1 中 <code>let y = 6;</code> 的 <code>6</code> 其是就是個算出 <code>6</code> 的表達式。呼叫函式也可以是表達式、呼叫巨集也是表達、我們用 <code>{}</code> 產生的作用域也是表達式。舉例來說：</p>
+<p>表達式則會運算出些東西，並組合成你大部分所寫的 Rust 程式。先想想看一個簡單的數學運算比如 <code>5 + 6</code>，這就是個會算出 <code>11</code> 的表達式。表達式可以是陳述式的一部分：在範例 3-1 中 <code>let y = 6;</code> 的 <code>6</code> 其是就是個算出 <code>6</code> 的表達式。呼叫函式也可以是表達式、呼叫巨集也是表達式、我們用 <code>{}</code> 產生的作用域也是表達式。舉例來說：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 5;
