--- a/print.html
+++ b/print.html
@@ -1641,7 +1641,7 @@ note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace.
 }
 
 fn another_function() {
-    println!(&quot;Another function.&quot;);
+    println!(&quot;另一支函式。&quot;);
 }
 </code></pre></pre>
 <p>Rust 的函式定義從 <code>fn</code> 開始且在函式名稱後會有一組括號，大括號告訴編譯器函式本體的開始與結束位置。</p>
@@ -1652,7 +1652,7 @@ fn another_function() {
     Finished dev [unoptimized + debuginfo] target(s) in 0.28s
      Running `target/debug/functions`
 Hello, world!
-Another function.
+另一支函式。
 </code></pre>
 <p>程式碼會按照 <code>main</code> 函式中的順序執行。首先，「Hello, world!」的訊息會先顯示出來，再來才會呼叫 <code>another_function</code> 並印出它的訊息。</p>
 <h3><a class="header" href="#函式參數" id="函式參數">函式參數</a></h3>
@@ -1687,7 +1687,7 @@ fn another_function(x: i32, y: i32) {
     println!(&quot;y 的數值爲：{}&quot;, y);
 }
 </code></pre></pre>
-<p>此範例建立了一個有兩個參數的函式，兩個都是 <code>i32</code> 型別。接著函式在印出兩個參數的數值，注意參數不必得是相同的形態，這只是我們在此範例這樣寫而已。</p>
+<p>此範例建立了一個有兩個參數的函式，兩個都是 <code>i32</code> 型別。接著函式在印出兩個參數的數值，注意參數不必得是相同的型別，這只是我們在此範例這樣寫而已。</p>
 <p>讓我們試著執行此程式碼，請覆蓋你的專案 <em>functions</em> 內的 <em>src/main.rs</em> 檔案內容爲以上範例，然後用 <code>cargo run</code> 執行程式：</p>
 <pre><code class="language-console">$ cargo run
    Compiling functions v0.1.0 (file:///projects/functions)
@@ -1699,7 +1699,7 @@ y 的數值爲：6
 <p>因爲我們呼叫函式時，將 <code>5</code> 給了  <code>x</code> 且將 <code>6</code> 給了 <code>y</code>，字串就會印出這些數值。</p>
 <h3><a class="header" href="#函式本體包含陳述式與表達式" id="函式本體包含陳述式與表達式">函式本體包含陳述式與表達式</a></h3>
 <p>函式本體是由一系列的陳述式（statements）並在最後可以選擇加上表達式（expression）來組成。目前我們只講了沒有用到表達式做結尾的函式。由於 Rust 是門基於表達式（expression-based）的語言，知道這樣的區別是很重要的。其他語言通常沒有這樣的區別，所以現在讓我們來看看陳述式和表達式有什麼不同，以及它們怎麼影響函式本體。</p>
-<p>我們其實已經使用了很多次陳述式與表達式。*陳述式（Statements）*是進行一些動作的指令，且不回傳任何數值。*表達式（Expressions）*則是計算並產生數值。讓我們來看一些範例：</p>
+<p>我們其實已經使用了很多次陳述式與表達式。<em>陳述式（Statements）</em> 是進行一些動作的指令，且不回傳任何數值。<em>表達式（Expressions）</em> 則是計算並產生數值。讓我們來看一些範例：</p>
 <p>建立一個變數然後用 <code>let</code> 關鍵字賦值給它就是一道陳述式。在範例 3-1 中的 <code>let y = 6;</code> 就是個陳述式。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
@@ -1726,7 +1726,7 @@ error: expected expression, found statement (`let`)
   = note: variable declaration using `let` is a statement
 </code></pre>
 <p><code>let y = 6</code> 陳述式不回傳數值，所以 <code>x</code> 得不到任何數值。這就和其他語言有所不同，像是 C 或 Ruby，通常它們的賦值仍能回傳所得到的值。在那些語言，你可以寫 <code>x = y = 6</code> 同時讓 <code>x</code> 與 <code>y</code> 都取得 <code>6</code>，但在 Rust 就不行。</p>
-<p>表達式則會運算出些東西，並組合成你大部分所寫的 Rust 程式。先想想看一個簡單的數學運算比如 <code>5 + 6</code>，這就是個會算出 <code>11</code> 的表達式。表達式可以是陳述式的一部分：在範例 3-1 中 <code>let y = 6;</code> 的 <code>6</code> 其是就是個算出 <code>6</code> 的表達式。呼叫函式也可以是表達式、呼叫巨集也是表達、我們用 <code>{}</code> 產生的作用域也是表達式。舉例來說：</p>
+<p>表達式則會運算出些東西，並組合成你大部分所寫的 Rust 程式。先想想看一個簡單的數學運算比如 <code>5 + 6</code>，這就是個會算出 <code>11</code> 的表達式。表達式可以是陳述式的一部分：在範例 3-1 中 <code>let y = 6;</code> 的 <code>6</code> 其是就是個算出 <code>6</code> 的表達式。呼叫函式也可以是表達式、呼叫巨集也是表達式、我們用 <code>{}</code> 產生的作用域也是表達式。舉例來說：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     let x = 5;
@@ -1832,28 +1832,28 @@ To learn more, run the command again with --verbose.
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>// hello, world
+</span>// 安安，你好
 <span class="boring">}
 </span></code></pre></pre>
 <p>在 Rust 中，慣用的註解風格是用兩行斜線在加上一個空格起頭，然後註解就能一直寫到該行結束爲止。如果註解會超過一行的話，你需要在每一行都加上 <code>//</code>，如下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>// So we’re doing something complicated here, long enough that we need
-// multiple lines of comments to do it! Whew! Hopefully, this comment will
-// explain what’s going on.
+</span>// 這邊處理的事情很複雜，長到
+// 我們需要多行註解來能解釋！
+// 希望此註解能幫助你理解。
 <span class="boring">}
 </span></code></pre></pre>
-<p>註解也可以加載程式碼之後：</p>
+<p>註解也可以加在程式碼之後：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
-    let lucky_number = 7; // I’m feeling lucky today
+    let lucky_number = 7; // 幸運 777！
 }
 </code></pre></pre>
 <p>不過你會更常看到它們用用以下格式，註解會爲於要說明的程式碼上一行：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
-    // I’m feeling lucky today
+    // 幸運 777！
     let lucky_number = 7;
 }
 </code></pre></pre>
@@ -1875,38 +1875,38 @@ To learn more, run the command again with --verbose.
     let number = 3;
 
     if number &lt; 5 {
-        println!(&quot;condition was true&quot;);
+        println!(&quot;條件爲真&quot;);
     } else {
-        println!(&quot;condition was false&quot;);
+        println!(&quot;條件爲否&quot;);
     }
 }
 </code></pre></pre>
-<p>所有的 <code>if</code> 表達式都由 <code>if</code> 關鍵字開始在加上一個條件。在此例中的條件是判斷變數 <code>number</code> 是否小於 5。條件符合時所要執行的程式碼區塊被放在條件之後的大括號裡。與 <code>if</code> 表達式條件相關的程式碼段落有時也被稱爲 <em>arms</em>，就像我們在第二章<a href="ch02-00-guessing-game-tutorial.html#comparing-the-guess-to-the-secret-number">「將猜測的數字與祕密數字做比較」</a><!-- ignore -->段落提到的 <code>match</code> 表達式的分支一樣。</p>
+<p>所有的 <code>if</code> 表達式都由 <code>if</code> 關鍵字開始再加上一個條件。在此例中的條件是判斷變數 <code>number</code> 是否小於 5。條件符合時所要執行的程式碼區塊被放在條件之後的大括號裡。與 <code>if</code> 表達式條件相關的程式碼段落有時也被稱爲<em>分支（arms）</em>，就像我們在第二章<a href="ch02-00-guessing-game-tutorial.html#%E5%B0%87%E7%8C%9C%E6%B8%AC%E7%9A%84%E6%95%B8%E5%AD%97%E8%88%87%E7%A5%95%E5%AF%86%E6%95%B8%E5%AD%97%E5%81%9A%E6%AF%94%E8%BC%83">「將猜測的數字與祕密數字做比較」</a><!-- ignore -->段落提到的 <code>match</code> 表達式的分支一樣。</p>
 <p>另外，我們還可以選擇性地加上 <code>else</code> 表達式（就像範例寫的），讓條件不符時可以去執行另外一段程式碼。如果你沒有提供 <code>else</code> 表達式且條件爲否的話，程式會直接略過 <code>if</code> 的程式碼區塊，接著執行後續的程式碼。</p>
 <p>請嘗試執行此程式碼，你應該會看到以下輸出結果：</p>
 <pre><code class="language-console">$ cargo run
    Compiling branches v0.1.0 (file:///projects/branches)
     Finished dev [unoptimized + debuginfo] target(s) in 0.31s
      Running `target/debug/branches`
-condition was true
+條件爲真
 </code></pre>
 <p>讓我們來變更 <code>number</code> 的值使條件變成 <code>false</code>，再來看看會發生什麼事：</p>
 <pre><code class="language-rust ignore"><span class="boring">fn main() {
 </span>    let number = 7;
 <span class="boring">
 </span><span class="boring">    if number &lt; 5 {
-</span><span class="boring">        println!(&quot;condition was true&quot;);
+</span><span class="boring">        println!(&quot;條件爲真&quot;);
 </span><span class="boring">    } else {
-</span><span class="boring">        println!(&quot;condition was false&quot;);
+</span><span class="boring">        println!(&quot;條件爲否&quot;);
 </span><span class="boring">    }
 </span><span class="boring">}
 </span></code></pre>
-<p>在跑一次程式，然後看看輸出：</p>
+<p>再跑一次程式，然後看看輸出：</p>
 <pre><code class="language-console">$ cargo run
    Compiling branches v0.1.0 (file:///projects/branches)
     Finished dev [unoptimized + debuginfo] target(s) in 0.31s
      Running `target/debug/branches`
-condition was false
+條件爲否
 </code></pre>
 <p>還有一件值得注意的是程式碼的條件判斷<em>必須</em>是 <code>bool</code>。如果條件不是 <code>bool</code> 的話，我們就會遇到錯誤。比方說，試試以下程式碼：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -1914,7 +1914,7 @@ condition was false
     let number = 3;
 
     if number {
-        println!(&quot;number was three&quot;);
+        println!(&quot;數字爲三&quot;);
     }
 }
 </code></pre>
@@ -1940,11 +1940,11 @@ To learn more, run the command again with --verbose.
     let number = 3;
 
     if number != 0 {
-        println!(&quot;number was something other than zero&quot;);
+        println!(&quot;數字不爲零&quot;);
     }
 }
 </code></pre></pre>
-<p>執行此程式碼就會印出「number was something other than zero」。</p>
+<p>執行此程式碼就會印出「數字不爲零」。</p>
 <h4><a class="header" href="#使用-else-if-處理多重條件" id="使用-else-if-處理多重條件">使用 <code>else if</code> 處理多重條件</a></h4>
 <p>想要實現多重條件的話，你可以將 <code>if</code> 和 <code>else</code> 組合成 <code>else if</code> 表達式。舉例來說：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
