deploy: 47ddad73d2f7cb61d02455e967d637a711b8db14

--- a/ch04-03-slices.html
+++ b/ch04-03-slices.html
@@ -481,7 +481,7 @@ let slice = &amp;a[1..3];
 </span></code></pre></pre>
 <p>此 slice 的型別爲 <code>&amp;[i32]</code>，它和字串運作的方式一樣，儲存了 slice 的第一個元素以及總長度。你以後會對其他集合也使用這樣的 slice。我們會在第八章討論這些集合的更多細節。</p>
 <h2><a class="header" href="#總結" id="總結">總結</a></h2>
-<p>所有權、借用與 slices 的概念讓 Rust 可以在編譯時期就確保記憶體安全。Rust 程式語言讓你和其他程式語言一樣控制你的記憶體使用方式，但是會在所有者離開作用域時自動清除擁有的資料，讓你不必在編寫或除錯額外的程式碼。</p>
+<p>所有權、借用與 slices 的概念讓 Rust 可以在編譯時期就確保記憶體安全。Rust 程式語言讓你和其他程式語言一樣控制你的記憶體使用方式，但是會在擁有者離開作用域時自動清除擁有的資料，讓你不必在編寫或除錯額外的程式碼。</p>
 <p>所有權影響了 Rust 很多其它部分執行的方式，所以我們在書中之後討論這些概念。讓我們繼續到第五章，看看如何用 <code>struct</code> 將資料組合在一起。</p>
 <blockquote>
 <ul>
