--- a/print.html
+++ b/print.html
@@ -2168,10 +2168,10 @@ CTRL-C
 <blockquote>
 <h3><a class="header" href="#堆疊stack與堆積heap" id="堆疊stack與堆積heap">堆疊（Stack）與堆積（Heap）</a></h3>
 <p>在許多程式語言，你通常不需要去想到堆疊與堆積。但在像是 Rust 這樣的系統程式語言，資料是位於堆疊還是堆積就會有差，這會影響語言的行爲以及爲何你得作出某些特定決策。在本章稍後討論所有權時，都會談到堆疊與堆積的關聯，所以這裡預先稍作解釋。</p>
-<p>堆疊與堆積都是供你的程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱爲<em>後進先出（last in, first out)</em>。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼爲<em>推入堆疊（pushing onto the stack）</em>，而移除資料則是叫做<em>彈出堆疊（popping off the stack）</em>。</p>
-<p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆積。堆積就比較沒有組織，當你要將資料放入堆積，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記爲已佔用，然後回傳一個<em>指標（pointer）</em>，指著該位置的地址。這樣的過程稱爲<em>在堆積上分配（allocating on the heap）</em>，或者有時直接簡稱爲*分配（allocating）*就好。將數值放入堆疊不會被視爲是在分配。因爲指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
+<p>堆疊與堆積都是提供程式碼在執行時能夠使用的記憶體部分，但他們組成的方式卻不一樣。堆疊會按照它取得數值的順序依序存放它們，並以相反的順序移除數值。這通常稱爲<em>後進先出（last in, first out)</em>。你可以把堆疊想成是盤子，當你要加入更多盤子，你會將它們疊在最上面。如果你要取走盤子的話，你也是從最上方拿走。想要從底部或中間，插入或拿走盤子都是不可行的！當我們要新增資料時，我們會稱呼爲<em>推入堆疊（pushing onto the stack）</em>，而移除資料則是叫做<em>彈出堆疊（popping off the stack）</em>。</p>
+<p>所有在堆疊上的資料都必須是已知固定大小。在編譯時屬於未知或可能變更大小的資料必須儲存在堆積。堆積就比較沒有組織，當你要將資料放入堆積，你得要求一定大小的空間。記憶體分配器（memory allocator）會找到一塊夠大的空位，標記爲已佔用，然後回傳一個<em>指標（pointer）</em>，指著該位置的位址。這樣的過程稱爲<em>在堆積上分配（allocating on the heap）</em>，或者有時直接簡稱爲<em>分配（allocating）</em> 就好。將數值放入堆疊不會被視爲是在分配。因爲指標是固定已知的大小，所以你可以存在堆疊上。但當你要存取實際資料時，你就得去透過指標取得資料。</p>
 <p>你可以想像成是一個餐廳。當你進入餐廳時，你會告訴服務員你的團體有多少人，他就會將你們帶到足夠人數的餐桌。如果你的團體有人晚到的話，他們可以直接尋問你坐在哪而找到你。</p>
-<p>將資料推入堆疊會比在堆積上分配還來的快，因爲分配器不需要去搜尋哪邊才能存入新資料，其位置永遠在堆疊最上方。相對的，堆積就需要比較多步驟，分配器必須先找到一個夠大的空位來儲存資料，然後作下紀錄未下次分配做準備。</p>
+<p>將資料推入堆疊會比在堆積上分配還來的快，因爲分配器不需要去搜尋哪邊才能存入新資料，其位置永遠在堆疊最上方。相對的，堆積就需要比較多步驟，分配器必須先找到一個夠大的空位來儲存資料，然後作下紀錄爲下次分配做準備。</p>
 <p>在堆積上取得資料也比在堆疊上取得來得慢，因爲你需要用追蹤指標才找的到。現代的處理器如果在記憶體間跳轉越少的話速度就越快。讓我們繼續用餐廳做比喻，想像伺服器就是在餐廳爲數個餐桌點餐。最有效率的點餐方式就是依照餐桌順序輪流點餐。如果幫餐桌 A 點了餐之後跑到餐桌 B 點，又跑回到 A 然後又跑到 B 的話，可以想像這是個浪費時間的過程。同樣的道理，處理器在處理任務時，如果處理的資料相鄰很近（就如同存在堆疊）的話，當然比相鄰很遠（如同存在堆積）來得快。要在堆積分配大量的空間同樣也很花時間。</p>
 <p>當你的程式碼呼叫函式時，傳遞給函式的數值（可能包含指向堆積上資料的指標）與函式區域變數會被推入堆疊。當函式結束時，這些數值就會被彈出。</p>
 <p>追蹤哪部分的程式碼用到了堆積上的哪些資料、最小化堆積上的重複資料、以及清除堆積上沒再使用的資料確保你不會耗盡空間，這些問題都是所有權系統要處理的。一旦你理解所有權後，你通常就不再需要常常想到堆疊與堆積，不過能理解所有權就是爲了管理堆積有助於解釋爲何它要這樣運作。</p>
@@ -2179,9 +2179,9 @@ CTRL-C
 <h3><a class="header" href="#所有權規則" id="所有權規則">所有權規則</a></h3>
 <p>首先，讓我們先看看所有權規則。當我們在解釋說明時，請記得這些規則：</p>
 <ul>
-<li>Rust 中每個數值都會有一個變數作爲它的<em>所有者（owner）</em>。</li>
-<li>同時間只能有一個所有者。</li>
-<li>當所有者離開作用域時，數值就會被丟棄。</li>
+<li>Rust 中每個數值都會有一個變數作爲它的<em>擁有者（owner）</em>。</li>
+<li>同時間只能有一個擁有者。</li>
+<li>當擁有者離開作用域時，數值就會被丟棄。</li>
 </ul>
 <h3><a class="header" href="#變數作用域" id="變數作用域">變數作用域</a></h3>
 <p>我們已經在第二章示範了一支 Rust 的程式。現在既然我們已經知道了基本語法，我們接下來就不再將 <code>fn main() {</code> 寫進程式碼範例範例中。所以你在參考時，請記得親自寫在 <code>main</code> 函式內。這樣一來，我們的範例可以更加簡潔，讓我們更加專注在細節而非樣板程式。</p>
@@ -2209,9 +2209,9 @@ CTRL-C
 </ul>
 <p>目前爲止，變數何時有效與作用域的關係都還跟其他程式語言相似。現在我們要以此基礎來介紹 <code>String</code> 型別</p>
 <h3><a class="header" href="#string-型別" id="string-型別"><code>String</code> 型別</a></h3>
-<p>要能夠解釋所有權規則，我們需要使用比第三章的<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore -->介紹過的還複雜的型別才行。之前我們提到的型別都是儲存在堆疊上的，在作用域結束時就會從堆疊中彈出。但是我們想要觀察的是儲存在堆積上的資料，並研究 Rust 是如知道要清理資料的。</p>
+<p>要能夠解釋所有權規則，我們需要使用比第三章的<a href="ch03-02-data-types.html#data-types">「資料型別」</a><!-- ignore -->介紹過的還複雜的型別才行。之前我們提到的型別都是儲存在堆疊上的，在作用域結束時就會從堆疊中彈出。但是我們想要觀察的是儲存在堆積上的資料，並研究 Rust 是如何知道要清理資料的。</p>
 <p>我們會使用 <code>String</code> 最爲範例並專注在 <code>String</code> 與所有權有關的部分。這些部分也適用於其他基本函式庫或你自己定義的複雜資料型別。我們會在第八章更深入探討 <code>String</code>。</p>
-<p>我們已經看過字串字面值，字串的數值是寫死在我們的程式內的。字串字面值的確很方便，但他不可能完全適用於我們使用文字時的所有狀況。其中一個原因是因爲它是不可變的，另一個原因是並非所有字串值在我們編寫程式時就會知道。舉裡來說，要是我們想要收集使用者的輸入並儲存它呢？對於這些情形，Rust 提供第二種字串型別 <code>String</code>。此型別是分配在堆積上的，所以可以儲存我們在編譯期間未知的一些文字。你可以建議從字串字面值使用 <code>from</code> 函式來建立一個 <code>String</code>，如以下所示：</p>
+<p>我們已經看過字串字面值（string literals），字串的數值是寫死在我們的程式內的。字串字面值的確很方便，但它不可能完全適用於我們使用文字時的所有狀況。其中一個原因是因爲它是不可變的，另一個原因是並非所有字串值在我們編寫程式時就會知道。舉裡來說，要是我們想要收集使用者的輸入並儲存它呢？對於這些情形，Rust 提供第二種字串型別 <code>String</code>。此型別是分配在堆積上的，所以可以儲存我們在編譯期間未知的一些文字。你可以從字串字面值使用 <code>from</code> 函式來建立一個 <code>String</code>，如以下所示：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
@@ -2223,9 +2223,9 @@ CTRL-C
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let mut s = String::from(&quot;hello&quot;);
 
-    s.push_str(&quot;, world!&quot;); // push_str() appends a literal to a String
+    s.push_str(&quot;, world!&quot;); // push_str() 將字面值加到字串後面
 
-    println!(&quot;{}&quot;, s); // This will print `hello, world!`
+    println!(&quot;{}&quot;, s); // 這會印出 `hello, world!`
 <span class="boring">}
 </span></code></pre></pre>
 <p>所以這邊有何差別呢？爲何 <code>String</code> 是可變的，但字面值卻不行？兩者最主要的差別在於它們對待記憶體的方式。</p>
@@ -2237,7 +2237,7 @@ CTRL-C
 <li>我們不再需要這個 <code>String</code> 時，我們需要以某種方法將此記憶體還給分配器。</li>
 </ul>
 <p>當我們呼叫 <code>String::from</code> 時就等於完成第一個部分，它的實作會請求分配一塊它需要的記憶體。這邊大概和其他程式語言都一樣。</p>
-<p>不過第二部分就不同了。在擁有*垃圾回收機制（garbage collector, GC）*的語言中，GC 會追蹤並清理不再使用的記憶體，所以我們不用去擔心這件事。沒有 GC 的話，識別哪些記憶體不再使用並顯式呼叫程式碼釋放它們就是我們的責任了，就像我們請求取得它一樣。在以往的歷史我們可以看到要完成這件事是一項艱鉅的任務，如果我們忘了，那麼就等於在浪費記憶體。如果我們釋放的太早的話，我們則有可能會拿到無效的變數。要是我們釋放了兩次，那也會造成程式錯誤。我們必須準確無誤地配對一個 <code>allocate</code> 給剛好一個 <code>free</code>。</p>
+<p>不過第二部分就不同了。在擁有<em>垃圾回收機制（garbage collector, GC）</em> 的語言中，GC 會追蹤並清理不再使用的記憶體，所以我們不用去擔心這件事。沒有 GC 的話，識別哪些記憶體不再使用並顯式呼叫程式碼釋放它們就是我們的責任了，就像我們請求取得它一樣。在以往的歷史我們可以看到要完成這件事是一項艱鉅的任務，如果我們忘了，那麼就等於在浪費記憶體。如果我們釋放的太早的話，我們則有可能會拿到無效的變數。要是我們釋放了兩次，那也會造成程式錯誤。我們必須準確無誤地配對一個 <code>allocate</code> 給剛好一個 <code>free</code>。</p>
 <p>Rust 選擇了一條不同的道路：當記憶體在擁有它的變數離開作用域時就會自動釋放。以下是我們解釋作用域的範例 4-1，但使用的是 <code>String</code> 而不是原本的字串字面值：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    {
@@ -2276,10 +2276,10 @@ CTRL-C
 <p>當我們將 <code>s1</code> 賦值給 <code>s2</code>，<code>String</code> 的資料會被拷貝，不過我們拷貝的是堆疊上的指標、長度和容量。我們不會拷貝指標指向的堆積資料。資料以記憶體結構表示的方式會如圖示 4-2 表示。</p>
 <img alt="s1 and s2 pointing to the same value" src="img/trpl04-02.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-2：<code>s2</code> 擁有一份 <code>s1</code> 的指標、長度和容量的記憶體結構</span></p>
-<p>所以實際上的結構<em>不會</em>長的像圖示 4-3 這樣，如果 Rust 也會拷貝 堆積資料的話，才會看起來像這樣。如果 Rust 這麼做的話，<code>s2 = s1</code> 的動作花費會變得非常昂貴。當堆積上的資料非常龐大時，對執行時的性能影響是非常顯住的。</p>
+<p>所以實際上的結構<em>不會</em>長的像圖示 4-3 這樣，如果 Rust 也會拷貝堆積資料的話，才會看起來像這樣。如果 Rust 這麼做的話，<code>s2 = s1</code> 的動作花費會變得非常昂貴。當堆積上的資料非常龐大時，對執行時的性能影響是非常顯著的。</p>
 <img alt="s1 and s2 to two places" src="img/trpl04-03.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-3：如果 Rust 也會拷貝堆積資料，<code>s2 = s1</code> 可能會長得樣子</span></p>
-<p>稍早我們提到當變數離開作用域時，Rust 會自動呼叫 <code>drop</code> 函式並清理該變數在堆積上的資料。但圖示 4-2 顯式兩個資料指標都指向相同位置，這會造成一個問題。當 <code>s2</code> 與 <code>s1</code> 都離開作用域時，它們都會嘗試釋放相同的記憶體。這被稱呼爲*雙重釋放（double free）*錯誤，也是我們之前提過的錯誤之一。釋放記憶體兩次可能會導致記憶體損壞，進而造成安全漏洞。</p>
+<p>稍早我們提到當變數離開作用域時，Rust 會自動呼叫 <code>drop</code> 函式並清理該變數在堆積上的資料。但圖示 4-2 顯式兩個資料指標都指向相同位置，這會造成一個問題。當 <code>s2</code> 與 <code>s1</code> 都離開作用域時，它們都會嘗試釋放相同的記憶體。這被稱呼爲<em>雙重釋放（double free）</em> 錯誤，也是我們之前提過的錯誤之一。釋放記憶體兩次可能會導致記憶體損壞，進而造成安全漏洞。</p>
 <p>爲了保障記憶體安全，在此情況中 Rust 還會在做一件重要的事。與其嘗試拷貝分配的記憶體，Rust 會將 <code>s1</code> 視爲無效。因此當 <code>s1</code> 離開作用域時，Rust 不需要釋放任何東西。請看看如果在 <code>s2</code> 建立之後繼續使用 <code>s1</code> 會發生什麼事，以下程式就執行不了：</p>
 <pre><code class="language-rust ignore does_not_compile"><span class="boring">fn main() {
 </span>    let s1 = String::from(&quot;hello&quot;);
@@ -2309,13 +2309,13 @@ error: could not compile `ownership`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>如果你在其他語言聽過<em>淺拷貝（shallow copy）</em> 和 <em>深拷貝（deep copy）<em>這樣的詞，拷貝指標、長度和容量而沒有拷貝實際內容這樣的概念應該就相近於淺拷貝。但因爲 Rust 同時又無效化第一個變數，我們不會叫此爲淺拷貝，而是稱此動作爲</em>移動（move）</em>。在此範例我們會稱 <code>s1</code> <em>被移動</em> 到 <code>s2</code>，所以實際上發生的事長得像圖示 4-4 這樣。</p>
+<p>如果你在其他語言聽過<em>淺拷貝（shallow copy）</em> 和 <em>深拷貝（deep copy）</em> 這樣的詞，拷貝指標、長度和容量而沒有拷貝實際內容這樣的概念應該就相近於淺拷貝。但因爲 Rust 同時又無效化第一個變數，我們不會叫此爲淺拷貝，而是稱此動作爲<em>移動（move）</em>。在此範例我們會稱 <code>s1</code> <em>被移動</em> 到 <code>s2</code>，所以實際上發生的事長得像圖示 4-4 這樣。</p>
 <img alt="s1 moved to s2" src="img/trpl04-04.svg" class="center" style="width: 50%;" />
 <p><span class="caption">圖示 4-4：<code>s1</code> 無效後的記憶體結構</span></p>
 <p>這樣就解決了問題！只有 <code>s2</code> 有效的話，當它離開作用域，就只有它會釋放記憶體，我們就完成所有動作了。</p>
 <p>除此之外，這邊還表達了另一個設計決策：Rust 永遠不會自動將你的資料建立「深拷貝」。因此任何<em>自動</em>的拷貝動作都可以被視爲是對執行效能影響很小的。</p>
 <h4><a class="header" href="#變數與資料互動的方式克隆clone" id="變數與資料互動的方式克隆clone">變數與資料互動的方式：克隆（Clone）</a></h4>
-<p>要是我們<em>真的想</em>深拷貝 <code>String</code> 在堆積上的資料而非僅是堆疊資料的話，我們可以使用一個常見的方法叫做 <code>clone</code>。我們會在第五章講解方法語法，不過既然方法是很常見的程式語言功能，你很可能已經有些概念了。</p>
+<p>要是我們<em>真的想</em>深拷貝 <code>String</code> 在堆積上的資料而非僅是堆疊資料的話，我們可以使用一個常見的方法（method）叫做 <code>clone</code>。我們會在第五章講解方法語法，不過既然方法是很常見的程式語言功能，你很可能已經有些概念了。</p>
 <p>以下是 <code>clone</code> 方法運作的範例：</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let s1 = String::from(&quot;hello&quot;);
@@ -3020,7 +3020,7 @@ let slice = &amp;a[1..3];
 </span></code></pre></pre>
 <p>此 slice 的型別爲 <code>&amp;[i32]</code>，它和字串運作的方式一樣，儲存了 slice 的第一個元素以及總長度。你以後會對其他集合也使用這樣的 slice。我們會在第八章討論這些集合的更多細節。</p>
 <h2><a class="header" href="#總結-3" id="總結-3">總結</a></h2>
-<p>所有權、借用與 slices 的概念讓 Rust 可以在編譯時期就確保記憶體安全。Rust 程式語言讓你和其他程式語言一樣控制你的記憶體使用方式，但是會在所有者離開作用域時自動清除擁有的資料，讓你不必在編寫或除錯額外的程式碼。</p>
+<p>所有權、借用與 slices 的概念讓 Rust 可以在編譯時期就確保記憶體安全。Rust 程式語言讓你和其他程式語言一樣控制你的記憶體使用方式，但是會在擁有者離開作用域時自動清除擁有的資料，讓你不必在編寫或除錯額外的程式碼。</p>
 <p>所有權影響了 Rust 很多其它部分執行的方式，所以我們在書中之後討論這些概念。讓我們繼續到第五章，看看如何用 <code>struct</code> 將資料組合在一起。</p>
 <blockquote>
 <ul>
@@ -10435,7 +10435,7 @@ How dreary to be somebody!
 </ul>
 </blockquote>
 <h1><a class="header" href="#函式語言功能疊代器與閉包" id="函式語言功能疊代器與閉包">函式語言功能：疊代器與閉包</a></h1>
-<p>Rust 的設計靈感啟發自許多現有的語言與技術，其中一個影響十分顯住的就是<em>函式程式設計（functional programming）</em>。以函式風格的程式設計通常包含將函式視爲數值並作爲引數傳遞、將它們從其他函式回傳、將它們賦值給變數以便之後使用，以及更多。</p>
+<p>Rust 的設計靈感啟發自許多現有的語言與技術，其中一個影響十分顯著的就是<em>函式程式設計（functional programming）</em>。以函式風格的程式設計通常包含將函式視爲數值並作爲引數傳遞、將它們從其他函式回傳、將它們賦值給變數以便之後使用，以及更多。</p>
 <p>在本章節中，我們不會討論哪些才是屬於函式程式設計或哪些不是，而是介紹一些 Rust 中類似於許多語言常視爲函式語言特色的功能。</p>
 <p>更明確來說，我們會涵蓋：</p>
 <ul>
